--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 
     <main>
       <section id="featured-car">
-        <img src="pagani-car.jpg" alt="Pagani Car" class="car-image" />
+        <video autoplay loop muted class="car-video">
+          <source src="images/video copy.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
         <p class="center-text">Unveiling the spirit of speed and luxury. Pagani cars are not just vehicles, they are a testament to perfection and the art of performance.</p>
       </section>
     </main>
