--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
           <source src="images/video copy.mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
-        <p class="center-text">Unveiling the spirit of speed and luxury. Pagani cars are not just vehicles, they are a testament to perfection and the art of performance.</p>
+        <p class="elegant-quote">Pagani cars are not just vehicles, they are a testament to perfection and the art of performance.</p>
       </section>
     </main>
 
     <footer>
       <p>
-        &copy; 2024 Pagani Automobili. Follow us on:
-        <a href="#">Instagram</a> |
-        <a href="#">Twitter</a> |
-        <a href="#">Facebook</a>
+        &copy; 2024 Pagani Automobili. Designer: Pablo Madrid de los Reyes. Follow us on:
+        <a href="https://www.instagram.com/paganiautomobili/?hl=es">Instagram</a> |
+        <a href="https://x.com/paganiauto">X</a> |
+        <a href="https://es-la.facebook.com/PaganiAutomobili/photos">Facebook</a>
       </p>
     </footer>
   </body>
