--- a/about.html
+++ b/about.html
@@ -24,17 +24,26 @@
     <main>
         <section id="about-section">
             <h1>About Horacio Pagani</h1>
-            <div class="history-text">
-                <p>Horacio Pagani (born 10 November 1955) is the founder and CEO of Pagani Automobili S.p.A., the awesome Italian exotic car creator behind the likes of the Zonda and Huayra.</p>
-                <p>From humble roots in Argentina (his father was a baker), he was obsessed with cars from a young age. In 1983, he moved to Italy to pursue his dream of building a supercar, joining Lamborghini where he later built the Countach Evoluzione, a concept Lambo with heavy carbon fiber throughout.</p>
-                <p>When Lamborghini refused to buy an autoclave, it signaled the end of his career at Lamborghini.</p>
-                <p>In 1991, he went out on his own with his own consultancy called Modena Design, which still exists today. It is a firm focused on making carbon fiber composites for Formula One cars and clients like Daimler, Ferrari, and Aprilia. Soon afterwards, in 1992, Pagani Automobili Modena was founded by Pagani. It took seven full years until the Zonda was ready.</p>
-            </div>
-            <!-- Gallery of 3 Photos -->
-            <div class="gallery">
-                <img src="photo1.jpg" alt="Pagani Car 1" class="about-photo">
-                <img src="photo2.jpg" alt="Pagani Car 2" class="about-photo">
-                <img src="photo3.jpg" alt="Horacio Pagani" class="about-photo">
+            <div class="about-content">
+                <!-- Texto de la Historia en un bloque a la izquierda -->
+                <div class="history-text">
+                    <p>Horacio Pagani (born 10 November 1955) is the founder and CEO of Pagani Automobili S.p.A., the awesome Italian exotic car creator behind the likes of the Zonda and Huayra.</p>
+                    <p>From humble roots in Argentina (his father was a baker), he was obsessed with cars from a young age. In 1983, he moved to Italy to pursue his dream of building a supercar, joining Lamborghini where he later built the Countach Evoluzione, a concept Lambo with heavy carbon fiber throughout.</p>
+                    <p>When Lamborghini refused to buy an autoclave, it signaled the end of his career at Lamborghini.</p>
+                    <p>In 1991, he went out on his own with his own consultancy called Modena Design, which still exists today. It is a firm focused on making carbon fiber composites for Formula One cars and clients like Daimler, Ferrari, and Aprilia. Soon afterwards, in 1992, Pagani Automobili Modena was founded by Pagani. It took seven full years until the Zonda was ready.</p>
+                </div>
+                <!-- Galería de Fotos en un diseño dinámico -->
+                <div class="gallery">
+                    <div class="photo-container">
+                        <img src="photo1.jpg" alt="Pagani Car 1" class="about-photo">
+                    </div>
+                    <div class="photo-container">
+                        <img src="photo2.jpg" alt="Pagani Car 2" class="about-photo">
+                    </div>
+                    <div class="photo-container">
+                        <img src="photo3.jpg" alt="Horacio Pagani" class="about-photo">
+                    </div>
+                </div>
             </div>
         </section>
     </main>
