--- a/about.html
+++ b/about.html
@@ -35,13 +35,13 @@
                 <!-- Galería de Fotos en un diseño dinámico -->
                 <div class="gallery">
                     <div class="photo-container">
-                        <img src="photo1.jpg" alt="Pagani Car 1" class="about-photo">
+                        <img src="images/horacio1 copy.jpg" alt="Pagani Car 1" class="about-photo">
                     </div>
                     <div class="photo-container">
-                        <img src="photo2.jpg" alt="Pagani Car 2" class="about-photo">
+                        <img src="images/horacio2.jpg" alt="Pagani Car 2" class="about-photo">
                     </div>
                     <div class="photo-container">
-                        <img src="photo3.jpg" alt="Horacio Pagani" class="about-photo">
+                        <img src="images/horacio3.jpg" alt="Horacio Pagani" class="about-photo">
                     </div>
                 </div>
             </div>
