--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <section id="about-section">
             <h1>About Horacio Pagani</h1>
             <div class="about-content">
-                <!-- Texto de la Historia en un bloque -->
+                <!-- Texto de la Historia en un bloque con márgenes creativos -->
                 <div class="history-text">
                     <p>Horacio Pagani (born 10 November 1955) is the founder and CEO of Pagani Automobili S.p.A., the awesome Italian exotic car creator behind the likes of the Zonda and Huayra.</p>
                     <p>From humble roots in Argentina (his father was a baker), he was obsessed with cars from a young age. In 1983, he moved to Italy to pursue his dream of building a supercar, joining Lamborghini where he later built the Countach Evoluzione, a concept Lambo with heavy carbon fiber throughout.</p>
@@ -33,10 +33,9 @@
                     <p>In 1991, he went out on his own with his own consultancy called Modena Design, which still exists today. It is a firm focused on making carbon fiber composites for Formula One cars and clients like Daimler, Ferrari, and Aprilia. Soon afterwards, in 1992, Pagani Automobili Modena was founded by Pagani. It took seven full years until the Zonda was ready.</p>
                 </div>
 
-                <!-- Galería de Fotos con bordes redondeados y sombra -->
-                <div class="image-gallery">
-                    <img src="images/horacio1 copy.jpg" alt="Pagani Car 1" class="about-photo">
-                    <img src="images/horacio3.jpg" alt="Pagani Car 2" class="about-photo">
+                <!-- Foto centrada con contenedor de bordes redondeados y sombra -->
+                <div class="image-wrapper">
+                    <img src="images/horacio1.jpg" alt="Horacio Pagani" class="about-photo">
                 </div>
             </div>
         </section>
