--- a/about.html
+++ b/about.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About - Pagani Automobili</title>
-    <link rel="stylesheet" href="styles.css" />
-</head>
+    <link rel="stylesheet" href="about.css" />
+  </head>
 <body>
     <!-- Navbar -->
     <nav>
         <div class="nav-container">
-            <img src="images/logo_pagani copy.png" alt="Pagani Logo" class="logo" />
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+          <img src="images/logo_pagani copy.png" alt="Pagani Logo" class="logo" />
+      
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
         </div>
     </nav>
 
@@ -24,19 +25,13 @@
     <main>
         <section id="about-section">
             <h1>About Horacio Pagani</h1>
-            <div class="about-content">
-                <!-- Texto de la Historia en un bloque con márgenes creativos -->
-                <div class="history-text">
-                    <p>Horacio Pagani (born 10 November 1955) is the founder and CEO of Pagani Automobili S.p.A., the awesome Italian exotic car creator behind the likes of the Zonda and Huayra.</p>
-                    <p>From humble roots in Argentina (his father was a baker), he was obsessed with cars from a young age. In 1983, he moved to Italy to pursue his dream of building a supercar, joining Lamborghini where he later built the Countach Evoluzione, a concept Lambo with heavy carbon fiber throughout.</p>
-                    <p>When Lamborghini refused to buy an autoclave, it signaled the end of his career at Lamborghini.</p>
-                    <p>In 1991, he went out on his own with his own consultancy called Modena Design, which still exists today. It is a firm focused on making carbon fiber composites for Formula One cars and clients like Daimler, Ferrari, and Aprilia. Soon afterwards, in 1992, Pagani Automobili Modena was founded by Pagani. It took seven full years until the Zonda was ready.</p>
-                </div>
 
-                <!-- Foto centrada con contenedor de bordes redondeados y sombra -->
-                <div class="image-wrapper">
-                    <img src="images/horacio1.jpg" alt="Horacio Pagani" class="about-photo">
-                </div>
+            <!-- Contenedor con sombra y bordes redondeados -->
+            <div class="text-container">
+                <p><strong>Horacio Pagani</strong> (born 10 November 1955) is the founder and CEO of Pagani Automobili S.p.A., the awesome Italian exotic car creator behind the likes of the <em>Zonda</em> and <em>Huayra</em>.</p>
+                <p>From humble roots in Argentina (his father was a baker), he was obsessed with cars from a young age. In 1983, he moved to Italy to pursue his dream of building a supercar, joining <strong>Lamborghini</strong>, where he later built the Countach Evoluzione, a concept car with heavy carbon fiber throughout.</p>
+                <p>When Lamborghini refused to buy an autoclave, it signaled the end of his career there.</p>
+                <p>In 1991, he started his own consultancy, Modena Design, focused on making carbon fiber composites for Formula One cars. Shortly after, in 1992, he founded Pagani Automobili Modena. It took seven years for the Zonda to be ready.</p>
             </div>
         </section>
     </main>
@@ -44,9 +39,11 @@
     <!-- Footer -->
     <footer>
         <p>
-            &copy; 2024 Pagani Automobili. Follow us on:
-            <a href="#">Instagram</a> | <a href="#">Twitter</a> | <a href="#">Facebook</a>
+          &copy; 2024 Pagani Automobili. Designer: Pablo Madrid de los Reyes. Follow us on:
+          <a href="https://www.instagram.com/paganiautomobili/?hl=es">Instagram</a> |
+          <a href="https://x.com/paganiauto">X</a> |
+          <a href="https://es-la.facebook.com/PaganiAutomobili/photos">Facebook</a>
         </p>
-    </footer>
+      </footer>
 </body>
 </html>
