--- a/portfolio.html
+++ b/portfolio.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Pagani</title>
-    <link rel="stylesheet" href="portfolio.css"> <!-- Vinculación del CSS -->
+    <link rel="stylesheet" href="portfollio.css"> <!-- Vinculación del CSS -->
 </head>
 <body>
 
     <!-- Navbar -->
     <nav>
         <div class="nav-container">
-            <img src="logo.png" alt="Logo" class="logo"> <!-- Cambia la ruta según tu logo -->
+            <img src="images/logo_pagani copy.png" alt="Logo" class="logo"> <!-- Cambia la ruta según tu logo -->
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -33,8 +33,8 @@
             
             <!-- Contenedor de imágenes -->
             <div class="image-container">
-                <img src="pagani1.jpg" alt="Pagani Car 1"> <!-- Cambia la ruta a la primera imagen -->
-                <img src="pagani2.jpg" alt="Pagani Car 2"> <!-- Cambia la ruta a la segunda imagen -->
+                <img src="images/pagani6.jpg" alt="Pagani Car 1"> 
+                <img src="images/pagani7.jpg" alt="Pagani Car 2"> 
             </div>
         </div>
     </section>
@@ -42,7 +42,6 @@
     <!-- Footer -->
     <footer>
         <p>&copy; 2024 Your Name. All rights reserved.</p>
-        <p><a href="privacypolicy.html">Privacy Policy</a></p>
     </footer>
     
 </body>
