new content box

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,12 +37,31 @@
                 <img src="images/pagani7.jpg" alt="Pagani Car 2"> 
             </div>
         </div>
+
+        <div class="news-container huayra-container">
+            <h2>Introducing the Pagani Huayra</h2>
+            <p>
+                The Pagani Huayra, a masterpiece of engineering and design, takes performance to new heights. 
+                With a twin-turbo V12 engine, it delivers a driving experience like no other. 
+                This beauty not only captivates with its stunning aesthetics but also with its unparalleled power and agility. 
+                Get ready to embrace the future of hypercars.
+            </p>
+            <div class="image-container">
+                <img src="images/pagani8.jpg" alt="Pagani Huayra Image 1">
+                <img src="images/pagani9.jpg" alt="Pagani Huayra Image 2">
+            </div>
+        </div>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
-    </footer>
+        <p>
+          &copy; 2024 Pagani Automobili. Designer: Pablo Madrid de los Reyes. Follow us on:
+          <a href="https://www.instagram.com/paganiautomobili/?hl=es">Instagram</a> |
+          <a href="https://x.com/paganiauto">X</a> |
+          <a href="https://es-la.facebook.com/PaganiAutomobili/photos">Facebook</a>
+        </p>
+      </footer>
     
 </body>
 </html>
