--- a/portfolio.html
+++ b/portfolio.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Pagani</title>
-    <link rel="stylesheet" href="portfollio.css"> <!-- Vinculación del CSS -->
+    <link rel="stylesheet" href="portfollio.css">
 </head>
 <body>
 
-    <!-- Navbar -->
     <nav>
         <div class="nav-container">
-            <img src="images/logo_pagani copy.png" alt="Logo" class="logo"> <!-- Cambia la ruta según tu logo -->
+            <img src="images/logo_pagani copy.png" alt="Logo" class="logo"> 
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -21,17 +20,15 @@
         </div>
     </nav>
 
-    <!-- Portfolio Section -->
     <section id="portfolio-section">
         <h1>Portfolio of Pagani</h1>
-        
-        <!-- News Section -->
+
         <div class="news-container">
             <h2>Introducing the All-New Pagani 2025</h2>
             <p>Get ready to ignite your passion for speed! The upcoming Pagani 2025 is set to redefine the boundaries of automotive excellence. With an audacious design and unparalleled performance, it will be the talk of the town.</p>
             <p>Immerse yourself in the symphony of power as we unveil its roaring engine. Feel the adrenaline rush through your veins as you witness a masterpiece in motion!</p>
-            
-            <!-- Contenedor de imágenes -->
+
+ 
             <div class="image-container">
                 <img src="images/pagani6.jpg" alt="Pagani Car 1"> 
                 <img src="images/pagani7.jpg" alt="Pagani Car 2"> 
@@ -53,7 +50,6 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer>
         <p>
           &copy; 2024 Pagani Automobili. Designer: Pablo Madrid de los Reyes. Follow us on:
